Add picture to about page

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,17 @@ form .submit:hover {
 
 /*END OF RESUME PAGE*/
 
+/*BEGINNING OF ABOUT PAGE*/
+
+#Ryanpicture {
+  margin-bottom: 50px;
+}
+
+#aboutme {
+  margin-top: 120px;
+  text-align: justify;
+}
+/*END OF ABOUT PAGE*/
 /* Extra Extra small devices (less than 375px, such as iPhone 5)*/
 
 @media (max-width: 375px) {
