--- a/styles.css
+++ b/styles.css
@@ -173,42 +173,59 @@ a {
   padding-right: 100px;
 }
 
+/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
+.icon-bar {
+  position: fixed;
+  top: 48%;
+  left: 0%;
+  
+}
 
+/* Style the icon bar links */
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+  z-index: -1;
+  position: relative;
+}
+
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+#facebook {
+  background: #3B5998;
+  color: white;
+}
+
+#twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+#instagram {
+  background: #d6249f;
+  color: white;
+}
+
+#github {
+  background: #000;
+  color: white;
+}
+
+#linkedin {
+  background: #0e76a8;
+  color: white;
+}
 
 /*END OF MAIN CONTENT*/
 
 
-
-/*BEGINNING OF FOOTER*/
-
-/*Increases font of footer icons*/
-.fa {
-  font-size: 40px;
-
-
-}
-
-
-
-/*Keeps footer at the bottom of the page*/
-.panel-footer {
-  padding-top: 35px;
-  padding-bottom: 30px; 
-  background-color: #222;
-  border-top: 0;
-  max-height: 175px;
-  position: fixed;
-  /*bottom:0;*/
-  /*left: 0;
-  right: 0;*/
-  text-align: center;
-  /*display: block;*/
-  width: 100%;
-
-}
-
-
-/*END OF FOOTER*/
 
 /*BEGINNING OF CONTACT FORM*/
 
